--- a/app/src/main/res/layout/fragment_admin_manage_product.xml
+++ b/app/src/main/res/layout/fragment_admin_manage_product.xml
@@ -4,53 +4,60 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_admin_manage_product"
-    tools:context=".AdminManageProductFragment">
+    tools:context=".AdminManageProductFragment"
+    android:background="@drawable/glass_bg"> <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" android:orientation="vertical"
+    android:gravity="center"
+    android:padding="24dp"
+    android:background="@drawable/glass_card" android:layout_gravity="center"> <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Product Management"
+    android:textColor="@android:color/white" android:textSize="28sp"
+    android:textStyle="bold"
+    android:fontFamily="@font/poppins_semibold"
+    android:layout_marginBottom="32dp" />
 
-    <LinearLayout
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnShowTrendingProduct"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:layout_height="50dp"
+        android:text="View Top Trending Product"
+        android:textSize="18sp"
+        android:background="@drawable/button_glass_blue" android:textColor="@android:color/white" android:fontFamily="@font/poppins_semibold"
+        android:onClick="openViewTopTrendingProduct" />
 
-        <Button
-            android:id="@+id/btnShowTrendingProduct"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="View Top Trending Product"
-            android:textSize="20sp"
-            android:backgroundTint="@color/textColorHint"
-            android:onClick="openViewTopTrendingProduct" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnAddNewProduct"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Add New Product"
+        android:textSize="18sp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_glass_blue" android:textColor="@android:color/white" android:fontFamily="@font/poppins_semibold"
+        android:onClick="openAddProductActivity" />
 
-        <Button
-            android:id="@+id/btnAddNewProduct"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add New Product"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="@color/textColorHint"
-            android:onClick="openAddProductActivity" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnViewListProduct"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Update Product"
+        android:background="@drawable/button_glass_blue" android:textSize="18sp"
+        android:layout_marginTop="16dp"
+        android:textColor="@android:color/white" android:fontFamily="@font/poppins_semibold"
+        android:onClick="openUpdateProductActivity" />
 
-        <Button
-            android:id="@+id/btnViewListProduct"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Update Product"
-            android:backgroundTint="@color/textColorHint"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            android:onClick="openUpdateProductActivity" />
-        <Button
-            android:id="@+id/btnManageCategory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Manage Category"
-            android:backgroundTint="@color/textColorHint"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            android:onClick="openManageCategory" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnManageCategory"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Manage Category"
+        android:background="@drawable/button_glass_blue" android:textSize="18sp"
+        android:layout_marginTop="16dp"
+        android:textColor="@android:color/white" android:fontFamily="@font/poppins_semibold"
+        android:onClick="openManageCategory" />
 
-
-    </LinearLayout>
+</LinearLayout>
 
 </FrameLayout>
